--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@capacitor/android": "^3.3.2",
     "@capacitor/camera": "^1.2.0",
-    "@capacitor/core": "3.3.1",
+    "@capacitor/core": "^3.3.1",
     "@capacitor/filesystem": "^1.0.6",
     "@capacitor/storage": "^1.2.3",
     "@ionic/pwa-elements": "^3.0.2",
@@ -23,6 +24,7 @@
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
+    "@capacitor/cli": "^3.3.2",
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
